force-app/main/default/objects/Sym_Case__c/fields/Sym_Self_Billing__c.field-meta.xml
<CustomField>
    <fullName>Sym_Self_Billing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Self Billing</label>
    <length>160</length>
    <type>Text</type>
</CustomField>