force-app/main/default/objects/Sym_Case__c/fields/sym_sic__c.field-meta.xml
<CustomField>
    <fullName>sym_sic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>