force-app/main/default/objects/Sym_Case__c/fields/Sym_Target_Deductible_Family_ONN__c.field-meta.xml
<CustomField>
    <fullName>Sym_Target_Deductible_Family_ONN__c</fullName>
    <label>Target Deductible Family OON</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>