force-app/main/default/objects/Sym_Case__c/fields/Sym_Target_INN_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Sym_Target_INN_Coinsurance__c</fullName>
    <label>Target INN Coinsurance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>