force-app/main/default/objects/Sym_Case__c/fields/Sym_Target_OON_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Sym_Target_OON_Coinsurance__c</fullName>
    <label>Target OON Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>