force-app/main/default/objects/Sym_Case__c/fields/Sym_Target_OOP_Max_Family_OON__c.field-meta.xml
<CustomField>
    <fullName>Sym_Target_OOP_Max_Family_OON__c</fullName>
    <label>Target OOP Max Family OON</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>