force-app/main/default/objects/Sym_Case__c/fields/Sym_Target_Rx_Tier_Two_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Target_Rx_Tier_Two_Copay__c</fullName>
    <label>Target Rx Tier Two Copay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>