force-app/main/default/objects/Sym_Case__c/fields/Sym_Total_Dependents_Org__c.field-meta.xml
<CustomField>
    <fullName>Sym_Total_Dependents_Org__c</fullName>
    <label>Total Dependents Org</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>