force-app/main/default/objects/Sym_Case__c/fields/Sym_Total_OOP_Max_Individual_in_Network__c.field-meta.xml
<CustomField>
    <fullName>Sym_Total_OOP_Max_Individual_in_Network__c</fullName>
    <label>Total OOP Max Individual in Network</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>