force-app/main/default/objects/Sym_Case__c/fields/Sym_Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Sym_Waiting_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiting Period</label>
    <length>160</length>
    <type>Text</type>
</CustomField>