force-app/main/default/objects/Sym_Case__c/fields/Total_Subscriber_Count_Org__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscriber_Count_Org__c</fullName>
    <label>Total Subscriber Count Org</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>